# TGBotOleg

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: prod.yml
app/: main.py  texts.py
app/core/: config.py
app/db/: database.py  schema.py
app/db/repo/: models.py  notes.py
app/features/notes/: actions.py  parser.py  reminders.py  renderer.py  rendering.py  router.py  service.py
app/services/: notifications.py
tests/: test_parser.py  test_reminders.py  test_renderer.py  test_repository.py  test_router.py
