[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tgbotoleg"
version = "0.1.0"
description = "Telegram notes bot built with aiogram."
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3,<4",
    "aiosqlite>=0.19,<1",
    "python-dotenv>=1,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

